# pyHidroWeb

./: 34879500.csv  CONTRIBUTING.md  README.md  download.py  download_hidroweb.py  download_hidroweb_temp.py  example.ipynb  main.py  menu_thiessen.py  menus.py  pyHidroWeb.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  thiessen.py  utils.py
docs/: API_REFERENCE.md
src/pyhydroweb/: __init__.py  core.py  downloaders.py  exceptions.py  logging_config.py  metadata.py  utils.py  validators.py
tests/: 10100000.csv  __init__.py  conftest.py  download_hidroweb_temp.ipynb
tests/unit/: __init__.py  test_core.py  test_downloaders.py  test_metadata.py  test_validators.py
